--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
-        
+        //thinker
+        classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
