--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
         buildConfigField "String", "PLATFORM", "\"all\""
     }
 
+    //签名信息配置
     signingConfigs {
         release {
             try {
@@ -118,7 +119,7 @@ ext {
 
     //for normal build
     //old apk file to build patch apk
-    tinkerOldApkPath = "${bakPath}/app-debug-0424-15-02-56.apk"
+    tinkerOldApkPath = "${bakPath}/app-debug-0522-15-45-10.apk"
     //proguard mapping file to build patch apk
     tinkerApplyMappingPath = "${bakPath}/app-debug-1018-17-32-47-mapping.txt"
     //resource R.txt to build patch apk, must input if there is resource changed
