--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ def javaVersion = JavaVersion.VERSION_1_7
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.andy.thinker"
+        applicationId "com.andy.tinker"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -472,6 +472,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //butterknife
+    implementation 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
     //thinker
     //可选，用于生成application类
